--- a/templates/update-redesign/amp-update-attribute.html
+++ b/templates/update-redesign/amp-update-attribute.html
@@ -109,12 +109,6 @@
             </nav>
 
 
-            <div class="nhsuk-grid-column-three-quarters">
-                <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
-                    data-module="nhsuk-button" type="submit">
-                    Cancel update
-                </button>
-            </div>
 
 
             <div class="nhsuk-grid-column-three-quarters">
@@ -2459,23 +2453,30 @@
 
                     </div>
 
-                
+
 
                 </form>
 
-                 
+
             </div>
 
-              <div class="nhsuk-grid-column-one-quarter" > 
-                <div> 
-                        <br> <br>
-              </div>
-                    </div>
-              <div class="nhsuk-grid-column-three-quarters"> <button formaction="/update/amp?execution=e4s1"
-                        class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-top-4" role="button" id="submit"
-                        name="_eventId_submit" type="submit">Preview changes
-                    </button>
-                    </div>
+            <div class="nhsuk-grid-column-one-quarter">
+                <div>
+                    <br> <br>
+                </div>
+            </div>
+            <div class="nhsuk-grid-column-three-quarters"> <button formaction="/update/amp?execution=e4s1"
+                    class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-right-3" role="button" id="submit"
+                    name="_eventId_submit" type="submit">Preview changes
+                </button>
+              
+
+                <button class="nhsuk-button nhsuk-button--secondary-solid" data-module="nhsuk-button" type="submit">
+                    Cancel update
+                </button>
+
+
+            </div>
         </div>
     </div>
 </div>
