--- a/templates/update-redesign/amp-update-supplier.html
+++ b/templates/update-redesign/amp-update-supplier.html
@@ -8,12 +8,6 @@
             <h1 class="nhsuk-heading-xl" id="update-supplier-heading">A+E Medical Securing tape 2.5cm (Eurocare Impex
                 Services Ltd)</h1>
         </div>
-        <div class="nhsuk-grid-column-one-quarter" style="float: right;">
-            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
-                data-module="nhsuk-button" type="submit">
-                Cancel update
-            </button>
-        </div>
 
 
 
@@ -215,8 +209,16 @@
 
 
     </div>
-     <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit" type="submit">Preview changes
+     <button class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-right-3" id="submit" name="_eventId_submit" type="submit">Preview changes
             </button>
+
+                    
+            <button class="nhsuk-button nhsuk-button--secondary-solid "
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+     
+
 </div>
 
 <script>
