--- a/templates/update-redesign/attribute-update-snomed-code.html
+++ b/templates/update-redesign/attribute-update-snomed-code.html
@@ -15,13 +15,7 @@
             <h1 class="nhsuk-heading-xl" id="update-attribute-snomed-code-heading-heading">Aerosol generator</h1>
             </div>
 
-               <div class="nhsuk-grid-column-one-quarter" style="float: right;">
-            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
-                data-module="nhsuk-button" type="submit">
-                Cancel update
-            </button>
-        </div>
-
+        
 
 
 
@@ -222,9 +216,16 @@
 
                         </fieldset>
                     </div>
-                    <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit"
+                    <button class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-right-3" id="submit" name="_eventId_submit"
                         type="submit">Preview changes
                     </button>
+
+                          
+            <button class="nhsuk-button nhsuk-button--secondary-solid "
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+   
                 </div>
             </div>
         </form>
