--- a/templates/update-redesign/sup-update-current-name.html
+++ b/templates/update-redesign/sup-update-current-name.html
@@ -10,12 +10,7 @@
             <h1 class="nhsuk-heading-xl" id="update-name-heading">A A H Pharmaceuticals Ltd</h1>
         </div>
 
-        <div class="nhsuk-grid-column-one-quarter" style="float: right;">
-            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
-                data-module="nhsuk-button" type="submit">
-                Cancel update
-            </button>
-        </div>
+
 
         <form method="post">
             <input name="_csrf"
@@ -191,10 +186,16 @@
             </div>
 
 
-            <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit" type="submit">Preview
-                changes
-            </button>
+                 <button class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-right-3" id="submit" name="_eventId_submit"
+                        type="submit">Preview changes
+                    </button>
 
+                          
+            <button class="nhsuk-button nhsuk-button--secondary-solid "
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+   
         </form>
     </div>
 </div>
