--- a/templates/update-redesign/vmp-update-attribute.html
+++ b/templates/update-redesign/vmp-update-attribute.html
@@ -142,12 +142,7 @@
                     </li>
                 </ul>
             </nav>
-            <div class="nhsuk-grid-column-three-quarters">
-                <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
-                    data-module="nhsuk-button" type="submit">
-                    Cancel update
-                </button>
-            </div>
+     
             <div class="nhsuk-grid-column-three-quarters">
 
                 <div class="nhsuk-grid-column-two-thirds">
@@ -7012,11 +7007,16 @@
 
 
 
-
-                    <button formaction="/update/vmp?execution=e1s1"
-                        class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-top-4" role="button" id="submit"
-                        name="_eventId_submit" type="submit">Preview changes
+                 <button class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-right-3" id="submit" name="_eventId_submit"
+                        type="submit">Preview changes
                     </button>
+
+                          
+            <button class="nhsuk-button nhsuk-button--secondary-solid "
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+   
                 </form>
             </div>
         </div>
