--- a/templates/update-redesign/vtm-update-associated-vmp.html
+++ b/templates/update-redesign/vtm-update-associated-vmp.html
@@ -9,24 +9,18 @@
                 value="cwj07OkIkB7yZTlY9u_ZIe8SGuQUE2e1YHnZwCgTI_UNKAFZSmuW2tttpSbfVgthxsLtRNt3N9xwJ1eYUBjrpR4rFZM1GmI6"
                 type="hidden">
             <div class="nhsuk-grid-row">
-                <div class="nhsuk-grid-column-one-third" style="float: right;">
+  
 
-                    <button class="nhsuk-button nhsuk-button--secondary ">
-                        Cancel update
-                    </button>
-
-                </div>
-
-                <div class="nhsuk-grid-column-two-thirds">
+                <div class="nhsuk-grid-column-three-quarters">
 
                     <span class="nhsuk-caption-l" id="update-associated-vmps-sub-heading">Update associated VMPs</span>
                     <span class="nhsuk-u-visually-hidden"> - </span>
                     <h1 class="nhsuk-heading-xl" id="update-associated-vmps-heading">Abacavir</h1>
 
                 </div>
-                <div class="nhsuk-grid-column-one-third">
+                <div class="nhsuk-grid-column-one-quarter">
 
-                    <button class="nhsuk-button nhsuk-button--secondary nhs" id="add-vmp" name="_eventId_addVmp">
+                    <button class="nhsuk-button nhsuk-button--secondary nhsuk-button-float-right" id="add-vmp" name="_eventId_addVmp">
                         Add new associated VMP
                     </button>
                     <!--button class="nhsuk-button nhsuk-button--primary" id="submit-top" name="_eventId_submit"
@@ -604,9 +598,16 @@
                                 Back to top</a>
                         </div>
 
-                        <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit"
-                            type="submit">Preview changes
-                        </button>
+                                     <button class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-right-3" id="submit" name="_eventId_submit"
+                        type="submit">Preview changes
+                    </button>
+
+                          
+            <button class="nhsuk-button nhsuk-button--secondary-solid "
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+   
                     </div>
                 </div>
             </div>
