--- a/templates/update-redesign/vtm-update-snomed-code.html
+++ b/templates/update-redesign/vtm-update-snomed-code.html
@@ -9,12 +9,7 @@
             <h1 class="nhsuk-heading-xl" id="update-codes-heading">Abacavir</h1>
         </div>
 
-        <div class="nhsuk-grid-column-one-quarter" style="float: right;">
-            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
-                data-module="nhsuk-button" type="submit">
-                Cancel update
-            </button>
-        </div>
+
 
 
         <form method="post">
@@ -253,9 +248,16 @@
 
 
 
-                    <button class="nhsuk-button nhsuk-button--primary submit-button" id="submit" name="_eventId_submit"
+                                <button class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-right-3" id="submit" name="_eventId_submit"
                         type="submit">Preview changes
                     </button>
+
+                          
+            <button class="nhsuk-button nhsuk-button--secondary-solid "
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+   
                 </div>
 
             </div>
