--- a/templates/update-redesign/amp-update-current-name.html
+++ b/templates/update-redesign/amp-update-current-name.html
@@ -12,12 +12,6 @@
 
 </div>
 
-   <div class="nhsuk-grid-column-one-quarter" style="float: right;">
-            <button class="nhsuk-button nhsuk-button--secondary-solid nhsuk-button-float-right"
-                data-module="nhsuk-button" type="submit">
-                Cancel update
-            </button>
-        </div>
 
         <form method="post">
             <input name="_csrf"
@@ -207,8 +201,16 @@
             </div>
 
 
-            <button class="nhsuk-button nhsuk-button--primary" id="submit" name="_eventId_submit" type="submit">Preview changes
+            <button class="nhsuk-button nhsuk-button--primary nhsuk-u-margin-right-3" id="submit" name="_eventId_submit" type="submit">Preview changes
             </button>
+
+                   
+            <button class="nhsuk-button nhsuk-button--secondary-solid"
+                data-module="nhsuk-button" type="submit">
+                Cancel update
+            </button>
+        </div>
+
 
         </form>
     </div>
