--- a/templates/tce-2384/base2.html
+++ b/templates/tce-2384/base2.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="/css/govuk-frontend-4.2.0.min.css">
   <link rel="stylesheet" href="/css/govuk-frontend-ie8-4.2.0.min.css">
   <link rel="stylesheet" href="/css/gov.min.scss">
-  <link rel="stylesheet" href="/css/style.css">
+  <!--link rel="stylesheet" href="/css/style.css"-->
   <link rel="stylesheet" href="/css/custom.css">
   <link rel="stylesheet" href="/css/tree.css">
 
