--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
       <li><a href="/tce-2384/index">(TCE-2384) VTM ingredients in CDR</a></li>
       <li><a href="/update-redesign/index">Adding new buttons to update screens</a></li>
       <li><a href="/tce-2523/index">Bottom banner - supplier Information</a></li>
+      <li><a href="/new-search/index">Updated Search Page</a></li>
     </ul>
   </div>
 </div>
