--- a/templates/tce-2523/amp.html
+++ b/templates/tce-2523/amp.html
@@ -3305,9 +3305,9 @@
 </div>
 
 <div id="sticky-footer" class="sticky-footer nhsuk-breadcrumb">
-      <span style="display: flex;flex-direction: row;align-items: stretch">
+      <div style="display: flex; flex-wrap: wrap; align-items: flex-start; gap: 1rem;">
           <!--grid-template-columns: 1fr, 1fr, 1fr;-->
-          <div id="sticky-footer-prefix-container" style="text-wrap: nowrap;">
+          <div id="sticky-footer-prefix-container">
             <!--Invalid indicator-->
             
             <span id="sticky-footer-invalid" class="nhsuk-tag nhsuk-tag--green" aria-description="Valid">VAL</span>
@@ -3322,7 +3322,7 @@
             <span class="nhsuk-u-margin-left-1">|</span>
           </div>
 
-        <div class="nhsuk-u-margin-right-1 nhsuk-u-margin-left-1" style="white-space: nowrap;overflow: hidden;">
+        <div class="nhsuk-u-margin-right-1 nhsuk-u-margin-left-1" >
           <span id="sticky-footer-commodity-type" class="nhsuk-tag nhsuk-tag--purple">AMP</span>
           
           <span id="sticky-footer-product-name">A+E Medical Securing tape 2.5cm</span>
@@ -3332,7 +3332,7 @@
 
         <!--|-->
 
-        <div class="nhsuk-u-margin-right-3" style="text-wrap: nowrap;">
+        <div class="nhsuk-u-margin-right-3">
             <span class="nhsuk-u-margin-left-1">|</span>
             <a id="sticky-footer-back-to-top-link" href="#main-content">Back to top</a>
         </div>
@@ -3346,7 +3346,7 @@
           
           End of time
         </span>
-      </span>
+    </div>
   </div>
 
 {% endblock %}
