--- a/templates/tce-2523/supplier2.html
+++ b/templates/tce-2523/supplier2.html
@@ -8989,9 +8989,9 @@
 
  <!--TODO: HIDE THIS WHEN ON TABLET-->
         <div id="sticky-footer" class="sticky-footer nhsuk-breadcrumb">
-            <span style="display: flex;flex-direction: row;align-items: stretch">
+            <div style="display: flex; flex-wrap: wrap; align-items: flex-start; gap: 1rem;">
                 <!--grid-template-columns: 1fr, 1fr, 1fr;-->
-                <div id="sticky-footer-prefix-container" style="text-wrap: nowrap;">
+                <div id="sticky-footer-prefix-container" >
                     <!--Invalid indicator-->
 
                     <span id="sticky-footer-invalid" class="nhsuk-tag nhsuk-tag--green"
@@ -9006,7 +9006,7 @@
                 </div>
 
                 <div class="nhsuk-u-margin-right-1 nhsuk-u-margin-left-1"
-                    style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">
+                    >
                     <span id="sticky-footer-commodity-type">Supplier: </span>
 
                     <span id="sticky-footer-product-name">A A H Pharmaceuticals Ltd</span>
@@ -9015,7 +9015,7 @@
 
                 <!--|-->
 
-                <div class="nhsuk-u-margin-right-3" style="text-wrap: nowrap;">
+                <div class="nhsuk-u-margin-right-3" >
                     <span class="nhsuk-u-margin-left-1">|</span>
                     <a id="sticky-footer-back-to-top-link" href="#main-content">Back to top</a>
                 </div>
@@ -9030,7 +9030,7 @@
 
                     End of time
                 </span>
-            </span>
+            </div>
         </div>
 
     </div>
