Resolved merge conflicts

--- a/templates/user-designed-query/add-other-category.html
+++ b/templates/user-designed-query/add-other-category.html
@@ -17,7 +17,7 @@
                 Save user defined query
               <span class="nhsuk-u-visually-hidden"> - </span>
             </span>
-      Add other category name
+      Add new category name
     </h1>
   </legend>
 
@@ -32,7 +32,7 @@
 
 
 
-  <a class="nhsuk-button nhsuk-u-margin-top-5" id="continue-button" name="button" href="save-query-add-note.html">Continue</a>
+  <a class="nhsuk-button nhsuk-u-margin-top-5" id="continue-button" name="button" href="save-query-add-note.html">Save category</a>
 
   </div>
   <script>
