--- a/templates/user-designed-query/hierarchy-options-view.html
+++ b/templates/user-designed-query/hierarchy-options-view.html
@@ -28,24 +28,20 @@
   <div class="nhsuk-form-group">
 
     <fieldset class="nhsuk-fieldset" aria-describedby="example-hint">
-      <div class="nhsuk-hint" id="example-hint">
-        Select all options that are relevant to you.
-      </div>
-      <div class="nhsuk-checkboxes">
 
-                <div class="nhsuk-checkboxes__item">
-                  <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="true">
-                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">
-                    All attribute histories
-                  </label>
-                </div>
+<!--                <div class="nhsuk-checkboxes__item">-->
+<!--                  <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="true">-->
+<!--                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">-->
+<!--                    All attribute histories-->
+<!--                  </label>-->
+<!--                </div>-->
 
-                <div class="nhsuk-checkboxes__item">
-                  <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="email">
-                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">
-                    Attribute history
-                  </label>
-                </div>
+<!--                <div class="nhsuk-checkboxes__item">-->
+<!--                  <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="email">-->
+<!--                  <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">-->
+<!--                    Attribute history-->
+<!--                  </label>-->
+<!--                </div>-->
 
         <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l" >
           <h1 class="nhsuk-fieldset__heading nhsuk-u-margin-top-4"  >
@@ -114,5 +110,7 @@
 <a class="nhsuk-button nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="related-details-page.html" id="submitButton">
   Continue
 </a>
-
+<a class="nhsuk-button nhsuk-button--reverse nhsuk-u-margin-top-5" data-module="nhsuk-button" type="submit" href="historical-confirmation-page.html" id="submitButton">
+  Historical confirmation
+</a>
 {% endblock %}
