--- a/templates/user-designed-query/save-query-add-note.html
+++ b/templates/user-designed-query/save-query-add-note.html
@@ -46,8 +46,46 @@
 
       </div>
     </details>
-    <div class="nhsuk-form-group">
+    <div class="nhsuk-form-group nhsuk-u-margin-bottom-5">
+        <label class="nhsuk-label nhsuk-u-margin-top-5" for="search-box">
+          <h2>Add a category </h2>
+        </label>
+        <div class="nhsuk-hint" id="example-hint">
+          You can choose a category to save your query under.
+        </div>
+        <select class="nhsuk-select" id="select-1" name="search-box">
+          <option value="1"></option>
+          <option value="Cat A" >Cat A price checker </option>
+          <option value="3" >no reimbursement price</option>
+          <option value="4" >Part VIIIC prices</option>
+          <option value="5" >Part VIIIC prices</option>
+          <option value="6" >PCDD AMP Presentation class</option>
+          <option value="7" >PCDD VMP Preparation class</option>
+          <option value="8" >Pit type</option>
+          <option value="9" >PPA code check</option>
+          <option value="10" >Price field blank</option>
+          <option value="11" >Price with no price available</option>
+          <option value="12" >Reimbursement price at VMPP</option>
+          <option value="13" >Reinstate reimbursement price</option>
+          <option value="14" >SCDD AMP presentation class</option>
+          <option value="15" >SCDD VMP preparation class</option>
+          <option value="16" >Search for blank PPA codes at AMPP</option>
+          <option value="17" >Special order with no DND</option>
+          <option value="18" >VMP has abbrev name where VMP Prescribing status is not valid</option>
+          <option value="19" >VMP name generic etc prescribing status valid</option>
+          <option value="20" >VMP Preperation class changes</option>
+          <option value="21" >VMPP riemb price dt equals 0</option>
+          <option value="22" >Zero price + NHS ind</option>
+          <option value="23" >Zero price with reimbursement price</option>
+          <option value="24" >Zero reimbursement price</option>
+        </select>
+      <div class="nhsuk-inset-text">
+        <span class="nhsuk-u-visually-hidden">Information: </span>
 
+        <p>You can add a new catergory <a href="add-other-category.html" title="add category page">name here</a>.</p>
+      </div>
+
+      </div>
     <div class="nhsuk-form-group">
       <h2 class="nhsuk-label-wrapper">
         <label class="nhsuk-label nhsuk-label--l" for="more-detail">
