--- a/templates/user-designed-query/save-query-summary.html
+++ b/templates/user-designed-query/save-query-summary.html
@@ -32,6 +32,7 @@ summar{% extends "base.html" %}
 
       <dl class="nhsuk-summary-list">
 
+
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
             Cipher
@@ -42,6 +43,8 @@ summar{% extends "base.html" %}
           <dd class="nhsuk-summary-list__value">
             <a href="#"></a>
           </dd>
+
+
         </div>
 
       </dl>
@@ -61,7 +64,27 @@ summar{% extends "base.html" %}
         </div>
 
       </dl>
+      <dl class="nhsuk-summary-list">
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Category
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            Cat A price checker
+          </dd>
+        </div>
+      </dl>
 
+      <dl class="nhsuk-summary-list">
+      <div class="nhsuk-summary-list__row">
+        <dt class="nhsuk-summary-list__key">
+          Title
+        </dt>
+        <dd class="nhsuk-summary-list__value">
+          Large query for looking at VMPP Cat a pricing
+        </dd>
+      </div>
+      </dl>
       <!--      <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend&#45;&#45;l">-->
       <!--        <h2 class="nhsuk-fieldset__heading">Share query-->
       <!--        </h2>-->
