--- a/templates/user-designed-query/related-details-page.html
+++ b/templates/user-designed-query/related-details-page.html
@@ -95,7 +95,7 @@
       <details class="nhsuk-details nhsuk-details">
         <summary class="nhsuk-details__summary">
     <span class="nhsuk-details__summary-text">
-      Refine search results
+      Refine search displayed
     </span>
         </summary>
 
@@ -112,18 +112,6 @@
               <option value="100" >50</option>
             </select>
           </div>
-
-          <div class="nhsuk-form-group " style="position: relative;">
-            <label class="nhsuk-label" for="example">
-              Search
-            </label>
-            <div style="position: relative; width: 100%;">
-              <input
-                  class="nhsuk-input"
-                  id="example"
-                  name="example"
-                  type="text"
-                  style="padding-left: 9px; padding-right: 40px; width: 100%;"/>
 
               <a class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-top-5"
                  data-module="nhsuk-button" type="submit" href="large-data-table-N.html">
