--- a/templates/user-designed-query/saved-udq-view.html
+++ b/templates/user-designed-query/saved-udq-view.html
@@ -24,6 +24,10 @@
   </legend>
 </fieldset>
 
+
+
+
+
 <div class="nhsuk-tabs" data-module="nhsuk-tabs">
   <h2 class="nhsuk-tabs__title">
     Contents
@@ -85,12 +89,46 @@
 
       <div class="nhsuk-details__text">
         <label class="nhsuk-label nhsuk-u-margin-top-5" for="search-box">
+          <h4>Do you want to search for a query by Catagory?</h4>
+        </label>
+        <div class="nhsuk-hint" id="example-hint">
+          You can choose a Catagory.
+        </div>
+        <select class="nhsuk-select" id="select-1" name="search-box">
+          <option value="1"></option>
+          <option value="Cat A" >Cat A price checker </option>
+          <option value="3" >no reimbursement price</option>
+          <option value="4" >Part VIIIC prices</option>
+          <option value="5" >Part VIIIC prices</option>
+          <option value="6" >PCDD AMP Presentation class</option>
+          <option value="7" >PCDD VMP Preparation class</option>
+          <option value="8" >Pit type</option>
+          <option value="9" >PPA code check</option>
+          <option value="10" >Price field blank</option>
+          <option value="11" >Price with no price available</option>
+          <option value="12" >Reimbursement price at VMPP</option>
+          <option value="13" >Reinstate reimbursement price</option>
+          <option value="14" >SCDD AMP presentation class</option>
+          <option value="15" >SCDD VMP preparation class</option>
+          <option value="16" >Search for blank PPA codes at AMPP</option>
+          <option value="17" >Special order with no DND</option>
+          <option value="18" >VMP has abbrev name where VMP Prescribing status is not valid</option>
+          <option value="19" >VMP name generic etc prescribing status valid</option>
+          <option value="20" >VMP Preperation class changes</option>
+          <option value="21" >VMPP riemb price dt equals 0</option>
+          <option value="22" >Zero price + NHS ind</option>
+          <option value="23" >Zero price with reimbursement price</option>
+          <option value="24" >Zero reimbursement price</option>
+        </select>
+
+
+        <label class="nhsuk-label nhsuk-u-margin-top-5" for="search-box">
           <h4>Do you want to search for a query by Cypher?</h4>
         </label>
         <div class="nhsuk-hint" id="example-hint">
           You can choose a cypher.
         </div>
-        <select class="nhsuk-select" id="select-1" name="search-box">
+        <select class="nhsuk-select" id="select-Cypher" name="search-box">
           <option value="1"></option>
           <option value="Cat A">CHEMB</option>
           <option value="3">HEKIR</option>
@@ -283,6 +321,7 @@
         <th scope="col">Popularity</th>
         <th scope="col">Cypher</th>
         <th scope="col">Date saved</th>
+        <th scope="col" >Category</th>
         <th scope="col" >Title</th>
         <th scope="col">Version</th>
         <th scope="col">Notes</th>
@@ -294,6 +333,7 @@
         <td class="nhsuk-table__cell" data-sort-value="1">Extremely popular</td>
         <td class="nhsuk-table__cell" data-sort-value="1">Jahmo</td>
         <td class="nhsuk-table__cell">12 April 2025</td>
+        <td class="nhsuk-table__cell">Cat A price checker</td>
         <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">Large query for
           looking at VMPP Cat A price</a></td>
         <td class="nhsuk-table__cell">Original</td>
@@ -304,6 +344,7 @@
         <td class="nhsuk-table__cell" data-sort-value="2">Very popular</td>
         <td class="nhsuk-table__cell">Jahmo</td>
         <td class="nhsuk-table__cell ">10 April 2025</td>
+        <td class="nhsuk-table__cell">Cat A price checker</td>
         <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">Large query for
           looking at vmpp cat A price </a></td>
         <td class="nhsuk-table__cell">Original</td>
@@ -316,6 +357,7 @@
         <td class="nhsuk-table__cell" data-sort-value="1">Extremely popular</td>
         <td class="nhsuk-table__cell">Chemb</td>
         <td class="nhsuk-table__cell ">2 August 2024</td>
+        <td class="nhsuk-table__cell">Part VIIIC prices</td>
         <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">Query that shows Part
           VIIIC prices for XYZ</a></td>
         <td class="nhsuk-table__cell">Version 2</td>
@@ -328,8 +370,10 @@
         <td class="nhsuk-table__cell" data-sort-value="2">Very popular</td>
         <td class="nhsuk-table__cell">Chemb</td>
         <td class="nhsuk-table__cell ">20 May2024</td>
+        <td class="nhsuk-table__cell">PCDD VMP Preparation
+          class</td>
         <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">PCDD VMP Preparation
-          class</a></td>
+          class validations</a></td>
         <td class="nhsuk-table__cell">Original</td>
         <td class="nhsuk-table__cell "><a href="saved-query-view-notes.html">View notes</a></td>
 <!--        <td class="nhsuk-table__cell"><a-->
@@ -340,7 +384,8 @@
         <td class="nhsuk-table__cell" data-sort-value="3">Popular</td>
         <td class="nhsuk-table__cell">Hekir</td>
         <td class="nhsuk-table__cell ">22 April 2023</td>
-        <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">Price field blank</a>
+        <td class="nhsuk-table__cell">Price field blank</td>
+        <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">Price field blank tariff checks</a>
         </td>
         <td class="nhsuk-table__cell">Original</td>
         <td class="nhsuk-table__cell "><a href="saved-query-view-notes.html">View notes</a></td>
@@ -352,7 +397,9 @@
         <td class="nhsuk-table__cell" data-sort-value="4">Less popular</td>
         <td class="nhsuk-table__cell">Jahmo</td>
         <td class="nhsuk-table__cell ">07 September 2023</td>
-        <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">SCDD VMP preparation
+        <td class="nhsuk-table__cell">SCDD VMP preparation
+          class</td>
+        <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">Query for validating SCDD VMP preparation
           class.</a></td>
         <td class="nhsuk-table__cell">Original</td>
         <td class="nhsuk-table__cell "><a href="saved-query-view-notes.html">View notes</a></td>
@@ -364,8 +411,10 @@
         <td class="nhsuk-table__cell" data-sort-value="5">Rarely used</td>
         <td class="nhsuk-table__cell">Hekir</td>
         <td class="nhsuk-table__cell ">25 November 2022</td>
+        <td class="nhsuk-table__cell">VMP has abbrev name
+          where VMP Prescribing status is not valid</td>
         <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">VMP has abbrev name
-          where VMP Prescribing status is not valid</a></td>
+          where VMP Prescribing status is not valid validation </a></td>
         <td class="nhsuk-table__cell">Version 2</td>
         <td class="nhsuk-table__cell "><a href="saved-query-view-notes.html">View notes</a></td>
 <!--        <td class="nhsuk-table__cell"><a-->
@@ -376,8 +425,10 @@
         <td class="nhsuk-table__cell" data-sort-value="1">Extremely popular</td>
         <td class="nhsuk-table__cell">Chemb</td>
         <td class="nhsuk-table__cell ">12 April 2022</td>
-        <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">VMP has abbrev name
-          where VMP Prescribing status is not valid</a></td>
+        <td class="nhsuk-table__cell">VMP has abbrev name
+          where VMP Prescribing status is not valid</td>
+        <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html"> Small query to validate VMP has abbrev name
+           </a></td>
         <td class="nhsuk-table__cell">Version 3</td>
         <td class="nhsuk-table__cell "><a href="saved-query-view-notes.html">View notes</a></td>
 <!--        <td class="nhsuk-table__cell"><a-->
@@ -388,8 +439,9 @@
         <td class="nhsuk-table__cell" data-sort-value="2">Very popular</td>
         <td class="nhsuk-table__cell">KAKEL</td>
         <td class="nhsuk-table__cell ">25 April 2025</td>
-        <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">VMP has abbrev name
-          where VMP Prescribing status is not valid</a></td>
+        <td class="nhsuk-table__cell">VMP has abbrev name
+          where VMP Prescribing status is not valid</td>
+        <td class="nhsuk-table__cell"><a href="saved-query-summary-page.html">Large query to validate VMP has abbrev name</a></td>
         <td class="nhsuk-table__cell">Original</td>
         <td class="nhsuk-table__cell "><a href="saved-query-view-notes.html">View notes</a></td>
 <!--        <td class="nhsuk-table__cell"><a href="#">Options</a></td>-->
@@ -399,6 +451,7 @@
         <td class="nhsuk-table__cell" data-sort-value="3">Popular</td>
         <td class="nhsuk-table__cell">JAHMO</td>
         <td class="nhsuk-table__cell ">28 January 2022</td>
+        <td class="nhsuk-table__cell">Zero price with reimbursement</td>
         <td class="nhsuk-table__cell"><a href="#">Zero price with reimbursement price.</a></td>
         <td class="nhsuk-table__cell">Original</td>
         <td class="nhsuk-table__cell "><a href="saved-query-view-notes.html">View notes</a></td>
@@ -1296,6 +1349,37 @@
       <input class="nhsuk-input" id="example" name="example" type="text" style="width: 25%;">
     </div>
 
+    <div class="nhsuk-form-group nhsuk-u-margin-bottom-5">
+      <label class="nhsuk-label" for="select-1">
+        Choose a catagory
+      </label>  <select class="nhsuk-select" id="select-1" name="search-box">
+      <option value="1"></option>
+      <option value="Cat A" >Cat A price checker.udq </option>
+      <option value="3" >no reimbursement price,udq</option>
+      <option value="4" >Part VIIIC prices.udq</option>
+      <option value="5" >Part VIIIC prices.udq</option>
+      <option value="6" >PCDD AMP Presentation class.udq</option>
+      <option value="7" >PCDD VMP Preparation class.udq</option>
+      <option value="8" >Pit type.udq</option>
+      <option value="9" >PPA code check.udq</option>
+      <option value="10" >Price field blank.udq</option>
+      <option value="11" >Price with no price available.udq</option>
+      <option value="12" >Reimbursement price at VMPP.udq</option>
+      <option value="13" >Reinstate reimbursement price.udq</option>
+      <option value="14" >SCDD AMP presentation class.udq</option>
+      <option value="15" >SCDD VMP preparation class.ud</option>
+      <option value="16" >Search for blank PPA codes at AMPP.udq</option>
+      <option value="17" >Special order with no DND.udq</option>
+      <option value="18" >VMP has abbrev name where VMP Prescribing status is not valid.udq</option>
+      <option value="19" >VMP name generic etc prescribing status valid.udq</option>
+      <option value="20" >VMP Preperation class changes.udq</option>
+      <option value="21" >VMPP riemb price dt equals 0.udq</option>
+      <option value="22" >Zero price + NHS ind.udq</option>
+      <option value="23" >Zero price with reimbursement price.udq</option>
+      <option value="24" >Zero reimbursement price.udq</option>
+    </select>
+    </div>
+
     <!--refine search-->
     <details class="nhsuk-details">
       <summary class="nhsuk-details__summary">
@@ -1304,6 +1388,8 @@
     </span>
       </summary>
 
+
+
       <div class="nhsuk-details__text">
         <label class="nhsuk-label nhsuk-u-margin-top-5" for="search-box">
           <h4>Do you want to search for a query by Cypher?</h4>
@@ -1311,7 +1397,7 @@
         <div class="nhsuk-hint" id="example-hint">
           You can choose a cypher.
         </div>
-        <select class="nhsuk-select" id="select-1" name="search-box">
+        <select class="nhsuk-select" id="select-2" name="search-box">
           <option value="1"></option>
           <option value="Cat A">CHEMB</option>
           <option value="3">HEKIR</option>
