undo changes test

--- a/templates/undo-changes/index.html
+++ b/templates/undo-changes/index.html
@@ -1,4 +1,4 @@
-{% extends "new-search/base.html" %}
+{% extends "undo-changes/base.html" %}
 {% block content %}
 <div class="nhsuk-width-container">
   <div class="nhsuk-grid-row">
