--- a/templates/undo-changes/base2.html
+++ b/templates/undo-changes/base2.html
@@ -166,6 +166,13 @@
       </div>
     </div>
   </div>
+
+    <script src="/js/nhsuk.min.js"></script>
+  <script src="/js/gov.js"></script>
+  <script>
+    window.GOVUKFrontend.initAll();
+  </script>
+  {% block scripts %}{% endblock %}
 </footer>
 
 </body>
